[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["nukopy <pytwbf201830@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.6.1"
mypy = "^0.782"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
ipython = "^7.18.1"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
